第一次提交

--- a/css/app.css
+++ b/css/app.css
@@ -1,82 +1,239 @@
-*{
-  margin: 0px;
-  padding:0px;
-}
-/* intro item */
-/*intro item*/
-.intro-title h3{font-size: 40px;line-height: 30px;letter-spacing: 0px;color: #2c3e50;}
-.intro-title img{width:68px;}
-.intro-title p{font-size: 24px;font-weight: normal;font-stretch: normal;line-height: 25px;color: #626262;}
 
-h5,p{
-  color: #4c4c4c;
-}
+/******************* 公共样式 **********************/
 /* 导航 */
-@media (min-width: 768px) {
-  .navbar{
-    padding: 1.5rem 3rem;
-    padding-left: 5rem
-  }
-  .nav-item  a {
-    text-align: center;
-    width: 7rem;
-  }
+.navbar-light .navbar-nav a:hover{
+  border-bottom: 2px solid #c12f2f;
 }
 
-/* 关于我们 */
+/* 首页标题 */
 
-.main {
-  margin-bottom: 3rem;
+  .title-CN{
+    font-size: 28px;
+    line-height: 20px;
+    letter-spacing: 0px;
+    color: #2c3e50;
+  }
+ 
+  .title-EN{
+    font-size: 16px;
+    font-weight: normal;
+    font-stretch: normal;
+    line-height: 20px;
+    color: #626262;
+  }
+
+/******************* 关于我们 **********************/
+  #home_about .about-title{
+    font-size: 20px;
+    letter-spacing: 0px;
+  }
+  #home_about .about-p{
+    font-size:15px;
+    line-height: 19px;
+    font-weight: normal;
+      font-stretch: normal;
+  }
+
+/******************* 公司产品 **********************/
+  #home_product .product-title{
+    font-size: 20px;
+    letter-spacing: 0px;
+    color: #626262;
+    font-weight: normal;
+    font-stretch: normal;
+    margin-bottom: 0rem,
+    
+  }
+  #home_product .product-p{
+    font-size:14px;
+    line-height: 19px;
+    font-weight: normal;
+    font-stretch: normal;
+    color: #626262;
+  }
+  #home_product .product-item img{
+    width: 75px;
+    height: 75px;
+    margin: 5px
+  }
+  #home_product .item-active{
+    width: 342px;
+    height:100%;
+    margin-top: -10px;
+    box-shadow:0px 0px 8px 0px #999;
+  }
+ 
+  #home_product .item-active img{
+    width: 75px;
+    height:75px;
+    margin:8px;
+  }
+  #home_product .item-active .product-p{
+    font-size: 15px;
+    line-height: 20px;
+    color: #666;
+  }
+
+/******************* 成功案例 **********************/
+  #home_case .case-p{
+    font-size: 15px;
+    line-height: 25px;
+    letter-spacing: 0px;
+    color: #909090;
+  }
+  #home_case .figure-caption{
+    width: 100%;
+    background-color: #000000;
+    opacity: 0.3;
+    font-size: 24px;
+    line-height: 44px;
+    color: #fff;
+  }
+
+/******************* 新闻中心 **********************/
+
+.tab-news-item a,.tab-news-item span,.tab-news-item p{
+  font-size: 14px;
+  color: #666;
 }
-@media (min-width: 768px) {
-  .main {
-    padding-top: 6rem;
-    padding-bottom: 3rem;
-  }
-  .main h3{
-    margin-bottom:1.5rem;
-  }
-  .main h5{
-    margin-bottom:1rem;
-  }
-  .main>p {
-    margin-bottom:5rem;
+.tab-news-item h4{
+  display: inline-block;
+  font-size: 18px;
+  color: #333;
+}
+.tab-news-item p{
+  width:100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display:-webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  line-height: 24px;
+}
+
+
+.main-parterner{
+  background-color: #fafafa;
+  margin: 60px 0;
+}
+
+/******************* 页脚 **********************/
+footer {
+  background: #f0f0f0;
+}
+footer p{
+  margin-bottom:0px;
+  color: #909090;
+}
+footer h5{
+  margin-top:25px;
+}
+
+.footer-cp{
+  background-color: #000;
+  color:#fff;
+  line-height: 30px;
+  font-size: 16px;
+}
+
+
+
+
+
+  @media (min-width: 768px) {   /* 大屏幕设备 桌面*/
+ /* 首页主标题 */
+    .title-CN{
+      font-size: 40px;
+      line-height: 30px;
+
+    } 
+    .title-EN{
+      font-size: 24px;
+      line-height: 25px;
+    }
+
+    .navbar-nav li:after{  
+      background: #00ce60;
+      transition: all .2s ease;
+    }
+/******************* 关于我们 **********************/
+    #home_about .about-title{
+      font-size: 27px;
+    }
+    #home_about .about-p{
+      font-size:18px;
+      line-height: 26px;
+      letter-spacing: 0px;
+    }
+/******************* 公司产品 **********************/
+    .main-product{background: url('../img/web/product-bg.png') no-repeat 100%;}
+
+    #home_product .product-title{
+      font-size: 28px;
+      color: #626262;
+    }
+    #home_product .product-p{
+      font-size:16px;
+      line-height: 26px;
+      letter-spacing: 0px;
+      color: #626262;
+    }
+    #home_product .product-item img{
+      width: 100px;
+      height: 100px;
+      margin: 10px
+    }
+    #home_product .item-active{
+      width: 342px;
+      height:100%;
+      background-color: #fff;
+      margin-top: -30px;
+    }
+    #home_product .item-active .product-title{
+      font-size: 32px;
+      line-height: 32px;
+      letter-spacing: -1px;
+      color: #c12f2f;
+    }
+    #home_product .item-active img{
+      width: 110px;
+      height:110px;
+      margin:12px;
+    }
+    #home_product .item-active .product-p{
+      font-size: 18px;
+      line-height: 30px;
+    }
+/******************* 成功案例 **********************/
+    #home_case .case-p{
+      font-size: 18px;
+      line-height: 32px;
+    }
+   
+/******************* 页脚 **********************/
+footer img{
+  margin:15px 0 50px;
+}
+footer h5{
+  margin-top:50px;
+}
+footer p{
+  margin-bottom:1rem;
+}
+.footer-cp{
+  font-size: 20px;
+  line-height: 60px
+}
+
   }
   
-}
-@media (max-width: 767px) {
-  .main {
-    padding-top: 4rem;
-  }
-  .main .btn{
-    margin-bottom: 1rem;
-  }
-}
-.img-responsive {
-  display: block;
-  height: auto;
-  max-width: 100%;
-}
-/* 公司产品 */
-@media (max-width: 767px) {
-  .com-pd p{
-    padding: 1rem 2rem 2rem;
-  }
-}
-@media (min-width: 768px) {
-  .com-pd p{
-    margin-top:2rem
- }
-}
 
-/* 成功案例 */
-@media (max-width: 767px) {
-  .success-case p{
-    padding: 1rem 2rem 2rem;
-  }
-}
-@media (min-width: 768px) {
-  .success-case p{
-    margin:0rem 10rem
- }
-}
+
+
+
+
+
+
+
+
+     
