--- a/css/app.css
+++ b/css/app.css
@@ -56,11 +56,13 @@
     height: 75px;
     margin: 5px
   }
-  #home_product .item-active{
+  #home_product .product-item:hover{
     width: 342px;
     height:100%;
     margin-top: -10px;
     box-shadow:0px 0px 8px 0px #999;
+    background-color: #fff;
+    margin-top: -30px;
   }
   #home_product .item-active img{
     width: 75px;
@@ -72,6 +74,9 @@
     line-height: 20px;
     color: #666;
   }
+  #home_product a{
+    text-decoration: none;
+  }
 /* 成功案例 */
   #home_case .case-p{
     font-size: 15px;
@@ -79,13 +84,17 @@
     letter-spacing: 0px;
     color: #909090;
   }
+ 
   #home_case .figure-caption{
     width: 100%;
-    background-color: #000000;
-    opacity: 0.3;
+    height: 50px;
+    background-color: #000;
+    opacity: 0.7;
     font-size: 24px;
-    line-height: 44px;
+    font-weight: bold;
     color: #fff;
+    line-height: 50px;
+    margin-top: -50px;
   }
 
 /*************************** 页尾 ***********************************/
@@ -130,6 +139,12 @@ footer h5{
 .breadcrumb {
   border-bottom: 11px solid #eee;
   background-color: #fff; 
+
+}
+.breadcrumb-item a{
+  color:#333;
+  text-decoration: none
+
 }
 /* 公司简介主题部分 */
 .list-group-item {
@@ -142,12 +157,19 @@ footer h5{
   letter-spacing: 1px;
   color:#333;
 }
+
 .about-content p {
   margin-bottom: 0;
   font-size: 16px;
   letter-spacing: 1px;
   color: #666666;
   text-indent: 35px;
+}
+.about-team-member h3{
+  font-size: 18px;
+  line-height: 30px;
+  letter-spacing: -1px;
+  color: #333333;
 }
 
 /***************************** 公司产品 *********************************/
@@ -325,16 +347,6 @@ box-shadow: -0.1px 2px 5px 0px
 
 
 
-
-
-
-
-
-
-
-
-
-
   @media (min-width: 768px) {   /* 大屏幕设备 桌面*/
  /* 首页主标题 */
     .title-CN{
@@ -378,12 +390,7 @@ box-shadow: -0.1px 2px 5px 0px
       height: 100px;
       margin: 10px
     }
-    #home_product .item-active{
-      width: 342px;
-      height:100%;
-      background-color: #fff;
-      margin-top: -30px;
-    }
+    
     #home_product .item-active .product-title{
       font-size: 32px;
       line-height: 32px;
@@ -522,7 +529,7 @@ color: #909090
 }
 
 
- 
+
 }
   
 
